--- a/about.html
+++ b/about.html
@@ -28,26 +28,51 @@
     </header>
 
     <main>
-        <section id="about">
-            <p class="pretitle orange">Sobre Mi</p>
-            <h1 class="title">Especialista en marketing con una década de experiencia en el sector.</h1>
-            <div class="description">
-                <p>Me gradué de la Lic. en Comercialización (Marketing) de la UAI en 2012. Desde entonces, he trabajado en diversas empresas, desde startups hasta corporaciones multinacionales, 
-                    desarrollando y ejecutando estrategias de marketing que han impulsado el crecimiento y la visibilidad de las marcas. Mi enfoque está en el marketing digital 
-                    y la gestión de proyectos. </p>            
-                <p>Me dedico a crear estrategias de marketing que no sólo aumenten la visibilidad de las marcas, sino que también generen un impacto positivo y duradero en el mercado.</p>
+        <section id="about" class="grid-container-2">
+            <div class="lleft">
+                <p class="pretitle orange">Sobre Mi</p>
+                <h1 class="title">Especialista en marketing con una década de experiencia en el sector.</h1>
+            </div>
+            <div class="right">
+                <div class="description">
+                    <p>Me gradué de la Lic. en Comercialización (Marketing) de la UAI en 2012. Desde entonces, he trabajado en diversas empresas, desde startups hasta corporaciones multinacionales, 
+                        desarrollando y ejecutando estrategias de marketing que han impulsado el crecimiento y la visibilidad de las marcas. Mi enfoque está en el marketing digital 
+                        y la gestión de proyectos. </p>            
+                    <p>Me dedico a crear estrategias de marketing que no sólo aumenten la visibilidad de las marcas, sino que también generen un impacto positivo y duradero en el mercado.</p>
+                </div>
             </div>
         </section>
         <section id="philosophy" class="bg-light">
-            <h1 class="title">Filosofía de Trabajo</h1>
-            <p>Como profesional de marketing digital, mi filosofía de trabajo se centra en la innovación, la adaptabilidad y el compromiso con los resultados. Creo firmemente en el poder de las estrategias digitales para transformar negocios y conectar marcas con sus audiencias de manera significativa.</p>
-            <ul>
-                <li><b>Innovación Constante:</b> En un entorno digital en constante evolución, me esfuerzo por estar siempre a la vanguardia de las tendencias y tecnologías emergentes. Esto me permite ofrecer soluciones creativas y efectivas que destacan en un mercado competitivo.</li>
-                <li><b>Adaptabilidad y Flexibilidad:</b> Cada cliente y proyecto es único, por lo que adapto mis estrategias para satisfacer las necesidades específicas de cada uno. Mi enfoque flexible me permite responder rápidamente a los cambios del mercado y optimizar continuamente las campañas para maximizar su impacto.</li>
-                <li><b>Compromiso con los Resultados:</b> Mi objetivo principal es generar resultados tangibles y medibles para mis clientes. Utilizo un enfoque basado en datos para tomar decisiones informadas y asegurar que cada acción contribuya al logro de los objetivos de negocio.</li>
-                <li><b>Ética y Transparencia:</b> Valoro la integridad y la honestidad en todas mis interacciones profesionales. Mantengo una comunicación abierta y transparente con mis clientes, asegurando que estén informados y satisfechos con cada paso del proceso.   </li>
-                <li><b>Colaboración y Trabajo en Equipo:</b> Creo en el poder del trabajo colaborativo. Me esfuerzo por construir relaciones sólidas y de confianza con mis clientes y colegas, trabajando juntos para alcanzar el éxito común.</li>
-            </ul>
+            <h1 class="title center">Filosofía de Trabajo</h1>
+            <div class="description">
+                <p>Como profesional de marketing digital, mi filosofía de trabajo se centra en la innovación, la adaptabilidad y el compromiso con los resultados. Creo firmemente en el poder de las estrategias digitales para transformar negocios y conectar marcas con sus audiencias de manera significativa.</p>
+            </div>
+            <div class="grid-container-3">
+                <article class="item">
+                    <h2><span class="number orange">01. </span> Innovación Constante</h2> 
+                    <p>En un entorno digital en constante evolución, me esfuerzo por estar siempre a la vanguardia de las tendencias y tecnologías emergentes. Esto me permite ofrecer soluciones creativas y efectivas que destacan en un mercado competitivo.</p>
+                </article>
+                <article class="item">
+                    <h2><span class="number orange">02. </span>Adaptabilidad y Flexibilidad</h2>
+                    <p>Cada cliente y proyecto es único, por lo que adapto mis estrategias para satisfacer las necesidades específicas de cada uno. Mi enfoque flexible me permite responder rápidamente a los cambios del mercado y optimizar continuamente las campañas para maximizar su impacto.</p>
+                </article>
+                <article class="item">
+                    <h2><span class="number orange">03. </span>Compromiso con los Resultados</h2>
+                    <p>Mi objetivo principal es generar resultados tangibles y medibles para mis clientes. Utilizo un enfoque basado en datos para tomar decisiones informadas y asegurar que cada acción contribuya al logro de los objetivos de negocio.</p>
+                </article>
+                <article class="item">
+                    <h2><span class="number orange">04. </span>Colaboración y Trabajo en Equipo</h2>
+                    <p>Creo en el poder del trabajo colaborativo. Me esfuerzo por construir relaciones sólidas y de confianza con mis clientes y colegas, fomentando la sinergia y la comunicación efectiva. Trabajamos juntos, compartiendo ideas y estrategias, para alcanzar el éxito común.</p>
+                </article>
+                <article class="item">
+                    <h2><span class="number orange">05. </span>Ética y Transparencia</h2>
+                    <p>Valoro la integridad y la honestidad en todas mis interacciones profesionales. Mantengo una comunicación abierta y transparente con mis clientes, asegurando que estén informados y satisfechos con cada paso del proceso.</p>
+                </article>
+                <article class="item">
+                    <h2><span class="number orange">06. </span>Comunicación Constante</h2>
+                    <p>Es esencial para mí construir y mantener relaciones sólidas mis los clientes. Al mantener un diálogo abierto y continuo, se crean oportunidades para innovar y crecer juntos.</p>
+                </article>
+            </div>
         </section>
     </main>
 
