--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
             margin-left: 2em;
             text-align: justify;
         }
-
+        #intro img {
+            margin-top: 4em;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
@@ -43,20 +46,25 @@
     </header>
 
     <main>
-        <section id="intro">
-            <p class="pretitle">Hola, soy Laura</p>
-            <h1 class="title">Transformemos clicks en clientes.</h1>
-            <img src="img/image-01.png" alt="Foto Personal">
-            <p>A lo largo de mi carrera, he liderado campañas de marketing digital que han aumentado significativamente la visibilidad y el crecimiento de diversas marcas.</p>
-            <ul class="logros">
-                <li>Entre mis logros más destacados se encuentran:</li>
-                <li>Incremento del ROI en un 40% mediante la optimización de campañas digitales.</li>
-                <li>Desarrollo de estrategias de contenido que han aumentado el engagement en redes sociales en un 60%.</li>
-                <li>Coordinación de lanzamientos de productos que han superado las expectativas de ventas en un 50%.</li>
-            </ul>
-            <p>Soy una persona creativa y orientada a resultados, con una sólida capacidad para analizar datos y transformar insights en acciones efectivas.</p>
-            <p>Mi objetivo es seguir impulsando el éxito de las marcas a través de estrategias de marketing integradas y centradas en el cliente.</p>
-        </p>
+        <section id="intro" class="grid-container-home">
+            <div class="right">
+                <p class="pretitle">Hola, soy Laura</p>
+                <h1 class="title">Transformemos clicks en clientes.</h1>
+                <div class="description">
+                    <p>A lo largo de mi carrera, he liderado campañas de marketing digital que han aumentado significativamente la visibilidad y el crecimiento de diversas marcas.</p>
+                    <ul class="logros">
+                        <li>Entre mis logros más destacados se encuentran:</li>
+                        <li>Incremento del ROI en un 40% mediante la optimización de campañas digitales.</li>
+                        <li>Desarrollo de estrategias de contenido que han aumentado el engagement en redes sociales en un 60%.</li>
+                        <li>Coordinación de lanzamientos de productos que han superado las expectativas de ventas en un 50%.</li>
+                    </ul>
+                    <p>Soy una persona creativa y orientada a resultados, con una sólida capacidad para analizar datos y transformar insights en acciones efectivas.</p>
+                    <p>Mi objetivo es seguir impulsando el éxito de las marcas a través de estrategias de marketing integradas y centradas en el cliente.</p>
+                </div>
+            </div>
+            <div class="left">
+                <img src="img/image-01.png" alt="Foto Personal">
+            </div>
         </section>
     </main>
 
