--- a/portfolio.html
+++ b/portfolio.html
@@ -28,40 +28,43 @@
     </header>
 
     <main>        
-        <section id="portfolio" class="odd">
-            <p class="pretitle orange">Portfolio</p>
-            <h1 class="title">Orgullosa de impulsar marcas con estrategias digitales innovadoras y efectivas.</h1>
-            <article class="project">
-                <h3>Campaña de SEO para E-commerce</h3>
-                <p>Optimización de un sitio web de comercio electrónico para mejorar su posicionamiento en motores de búsqueda.</p>
-                <p>Incrementó el tráfico orgánico en un 50% en seis meses.</p>
-                <p><em>Herramientas Utilizadas:</em> Google Analytics, SEMrush, Ahrefs.</p>
-                <p><em>Rol:</em> Especialista en SEO.</p>
-            </article>
-            <article class="project">
-                <h3>Gestión de Redes Sociales para una Marca de Moda</h3>
-                <p>Creación y gestión de contenido para las redes sociales de una marca de moda. Aumentó el engagement en un 70% y crecimiento de seguidores en un 40%.</p>
-                <p><em>Herramientas Utilizadas:</em> Hootsuite, Canva, Facebook Insights.</p>
-                <p><em>Rol:</em> Community Manager.</p>
-            </article>
-            <article class="project">
-                <h3>Campaña de Email Marketing para una Startup Tecnológica</h3>
-                <p>Desarrollo de una estrategia de email marketing para una startup en el sector tecnológico. Tasa de apertura del 25% y tasa de conversión del 10%.</p>
-                <p><em>Herramientas Utilizadas:</em> Mailchimp, HubSpot.</p>
-                <p><em>Rol:</em> Especialista en Email Marketing.</p>
-            </article>
-            <article class="project">
-                <h3>Lanzamiento de Producto para una Empresa de Software</h3>
-                <p>Planificación y ejecución de la estrategia de marketing para el lanzamiento de un nuevo software. Generación de 500 leads cualificados en el primer mes.</p>
-                <p><em>Herramientas Utilizadas:</em> Salesforce, Google Ads, LinkedIn Ads.</p>
-                <p><em>Rol:</em> Gerente de Producto</p>
-            </article>
-            <article class="project">
-                <h3>Campaña de Publicidad en Redes Sociales para una ONG</h3>
-                <p>Creación y gestión de una campaña de publicidad en redes sociales para aumentar la visibilidad de una ONG. Incrementó el 60% en las donaciones y del 80% en la participación en eventos.</p>
-                <p><em>Herramientas Utilizadas:</em> Facebook Ads, Instagram Ads, Google Analytics.</p>
-                <p><em>Rol:</em> Especialista en Publicidad en Redes Sociales.</p>
-            </article>
+        <section id="portfolio" class="bg-light grid-container-2">
+            <div class="left">
+                <p class="pretitle orange">Portfolio</p>
+                <h1 class="title">Orgullosa de impulsar marcas con estrategias digitales innovadoras y efectivas.</h1>
+            </div>
+            <div class="right">
+                <article class="item">
+                    <h2>Campaña de SEO para E-commerce</h2>
+                    <p>Optimización de un sitio web de comercio electrónico para mejorar su posicionamiento en motores de búsqueda. Incrementó el tráfico orgánico en un 50% en seis meses.</p>
+                    <div class="txt-small"><em>Herramientas:</em> Google Analytics, SEMrush, Ahrefs.</div>
+                    <div class="txt-small"><em>Rol:</em> Especialista en SEO.</div>
+                </article>
+                <article class="item">
+                    <h2>Gestión de Redes Sociales para una Marca de Moda</h2>
+                    <p>Creación y gestión de contenido para las redes sociales de una marca de moda. Aumentó el engagement en un 70% y crecimiento de seguidores en un 40%.</p>
+                    <div class="txt-small"><em>Herramientas:</em> Hootsuite, Canva, Facebook Insights.</div>
+                    <div class="txt-small"><em>Rol:</em> Community Manager.</div>
+                </article>
+                <article class="item">
+                    <h2>Campaña de Email Marketing para una Startup Tecnológica</h2>
+                    <p>Desarrollo de una estrategia de email marketing para una startup en el sector tecnológico. Tasa de apertura del 25% y tasa de conversión del 10%.</p>
+                    <div class="txt-small"><em>Herramientas:</em> Mailchimp, HubSpot.</div>
+                    <div class="txt-small"><em>Rol:</em> Especialista en Email Marketing.</div>
+                </article>
+                <article class="item">
+                    <h2>Lanzamiento de Producto para una Empresa de Software</h2>
+                    <p>Planificación y ejecución de la estrategia de marketing para el lanzamiento de un nuevo software. Generación de 500 leads cualificados en el primer mes.</p>
+                    <div class="txt-small"><em>Herramientas:</em> Salesforce, Google Ads, LinkedIn Ads.</div>
+                    <div class="txt-small"><em>Rol:</em> Gerente de Producto</div>
+                </article>
+                <article class="item">
+                    <h2>Campaña de Publicidad en Redes Sociales para una ONG</h2>
+                    <p>Creación y gestión de una campaña de publicidad en redes sociales para aumentar la visibilidad de una ONG. Incrementó el 60% en las donaciones y del 80% en la participación en eventos.</p>
+                    <div class="txt-small"><em>Herramientas:</em> Facebook Ads, Instagram Ads, Google Analytics.</div>
+                    <div class="txt-small"><em>Rol:</em> Especialista en Publicidad en Redes Sociales.</div>
+                </article>
+            </div>
         </section>  
     </main>
 
