--- a/skills.html
+++ b/skills.html
@@ -11,6 +11,7 @@
             background-color: #f3f3f3;
             border-radius: 5px;
             margin: 10px 0;
+            border: 1px solid lightgray;
         }
         .skill-level {
             height: 20px;
@@ -51,68 +52,69 @@
         <section id="skills">
             <p class="pretitle orange">Mis Habilidades</p>
             <h1 class="title">El éxito en marketing requiere no sólo dominar herramientas y técnicas, sino también liderar, comunicar y resolver problemas eficazmente.</h1>
+            <div class="description">
+                <p> Las habilidades técnicas permiten a los profesionales ejecutar campañas efectivas, analizar datos y utilizar herramientas avanzadas para optimizar resultados. Sin embargo, las habilidades blandas son igualmente cruciales, ya que facilitan la comunicación clara, la colaboración en equipo y la adaptación a cambios rápidos en el mercado.</p>
+            </div>
         </section>
-        <section id="technical-skills" class="bg-light">
-            <h2>Habilidades Técnicas</h2>
-            <article>
-                <h4>Marketing Digital</h4>
-                <p>Soy experta en SEO, SEM, marketing en redes sociales, email marketing y análisis de métricas.</p>
-                <div class="skill-bar">
-                    <div class="skill-level high">90%</div>
-                </div>
-            </article>
-            <article>
-                <h4>Gestión de Proyectos</h4>
-                <p>Tengo una amplia experiencia en la planificación, ejecución y supervisión de campañas de marketing.</p>
-                <div class="skill-bar">
-                    <div class="skill-level medium-high">75%</div>
-                </div>
-            </article>
-            <article>
-                <h4>Análisis de Datos</h4>
-                <p>Habilidad para interpretar datos y métricas para tomar decisiones informadas y optimizar estrategias.</p>
-                <div class="skill-bar">
-                    <div class="skill-level high">80%</div>
-                </div>
-            </article>
-            <article>
-                <h4>Herramientas de Marketing</h4>
-                <p>Dominio de herramientas como Google Analytics, HubSpot, Hootsuite, y Adobe Creative Suite.</p>
-                <div class="skill-bar">
-                    <div class="skill-level medium-high">75%</div>
-                </div>
-            </article>
-        </section>
-        <section id="soft-skills">
-            <h2>Habilidades Blandas</h2>
-            <article>
-                <h4>Liderazgo</h4>
-                <p>Capacidad para liderar y motivar equipos multidisciplinarios hacia el logro de objetivos comunes.</p>
-                <div class="skill-bar">
-                    <div class="skill-level high">90%</div>
-                </div>
-            </article>
-            <article>
-                <h4>Comunicación</h4>
-                <p>La comunicación verbal y escrita es clave para facilitar la colaboración efectiva.</p>
-                <div class="skill-bar">
-                    <div class="skill-level high">90%</div>
-                </div>
-            </article>
-            <article>
-                <h4>Creatividad</h4>
-                <p>Innovación eje en la creación de campañas y estrategias que captan la atención del público objetivo.</p>
-                <div class="skill-bar">
-                    <div class="skill-level medium-high">75%</div>
-                </div>
-            </article>
-            <article>
-                <h4>Resolución de Problemas</h4>
-                <p>Enfoque proactivo para identificar y resolver desafíos de manera eficiente.</p>
-                <div class="skill-bar">
-                    <div class="skill-level high">95%</div>
-                </div>
-            </article>
+        <section id="metrics" class="bg-light">
+            <div class="grid-container-3">
+                <article class="item">
+                    <h2>Marketing Digital</h2>
+                    <p>Soy experta en SEO, SEM, marketing en redes sociales, email marketing y análisis de métricas.</p>
+                    <div class="skill-bar">
+                        <div class="skill-level high">90%</div>
+                    </div>
+                </article>
+                <article class="item">
+                    <h2>Gestión de Proyectos</h2>
+                    <p>Tengo una amplia experiencia en la planificación, ejecución y supervisión de campañas de marketing.</p>
+                    <div class="skill-bar">
+                        <div class="skill-level medium-high">75%</div>
+                    </div>
+                </article>
+                <article class="item">
+                    <h2>Análisis de Datos</h2>
+                    <p>Habilidad para interpretar datos y métricas para tomar decisiones informadas y optimizar estrategias.</p>
+                    <div class="skill-bar">
+                        <div class="skill-level high">80%</div>
+                    </div>
+                </article>
+                <article class="item">
+                    <h2>Herramientas de Marketing</h2>
+                    <p>Dominio de herramientas como Google Analytics, HubSpot, Hootsuite, y Adobe Creative Suite.</p>
+                    <div class="skill-bar">
+                        <div class="skill-level medium-high">75%</div>
+                    </div>
+                </article>
+                <article class="item">
+                    <h2>Liderazgo</h2>
+                    <p>Capacidad para liderar y motivar equipos multidisciplinarios hacia el logro de objetivos comunes.</p>
+                    <div class="skill-bar">
+                        <div class="skill-level high">90%</div>
+                    </div>
+                </article>
+                <article class="item">
+                    <h2>Comunicación</h2>
+                    <p>La comunicación verbal y escrita es clave para facilitar la colaboración efectiva.</p>
+                    <div class="skill-bar">
+                        <div class="skill-level high">90%</div>
+                    </div>
+                </article>
+                <article class="item">
+                    <h2>Creatividad</h2>
+                    <p>Innovación eje en la creación de campañas y estrategias que captan la atención del público objetivo.</p>
+                    <div class="skill-bar">
+                        <div class="skill-level medium-high">75%</div>
+                    </div>
+                </article>
+                <article class="item">
+                    <h2>Resolución de Problemas</h2>
+                    <p>Enfoque proactivo para identificar y resolver desafíos de manera eficiente.</p>
+                    <div class="skill-bar">
+                        <div class="skill-level high">95%</div>
+                    </div>
+                </article>
+            </div>
         </section>
     </main>
 
