--- a/services.html
+++ b/services.html
@@ -45,39 +45,43 @@
         <section id="services">
             <p class="pretitle orange">Servicios</p>
             <h1 class="title">Transformá visitas en clientes.</h1>
-            <p>Si estás buscando mejorar tu presencia en el mercado, aumentar tus ventas o simplemente necesitas asesoramiento sobre cómo llevar tu negocio al siguiente nivel, estás en el lugar correcto.</p>
-            <article>
-                <h2><span class="orange">01. </span>Digital Marketing</h2>
-                <p>Desde la creación de contenido hasta la optimización de motores de búsqueda, te ayudamos a conectar con tu audiencia y a impulsar tu marca en el mundo digital. Transformemos tu presencia en línea.</p>
-            </article>
-            <article>
-                <h2><span class="orange">02. </span>Marketing en Redes Sociales</h2>
-                <p>Aumenta tu visibilidad y engagement en las redes sociales con nuestras campañas personalizadas. Creamos contenido atractivo y gestionamos tus perfiles para que tu marca destaque y se conecte de manera auténtica con tu audiencia.</p>
-            </article>
-            <article>
-                <h2><span class="orange">03. </span>Marketing de Contenidos</h2>
-                <p>Captura la atención de tu público objetivo con contenido relevante y valioso. Desarrollamos y distribuimos contenido que no solo informa, sino que también inspira y convierte, fortaleciendo la lealtad a tu marca.</p>
-            </article>
-            <article>
-                <h2><span class="orange">04. </span>Publicidad Pagada</h2>
-                <p>Maximiza tu alcance y obtén resultados rápidos con nuestras campañas de publicidad pagada. Utilizamos plataformas como Google Ads y redes sociales para dirigir tráfico cualificado a tu sitio web y aumentar tus conversiones</p>
-            </article>
-            <article>
-                <h2><span class="orange">05. </span>Optimización para Motores de Búsqueda (SEO)</h2>
-                <p>Mejora tu posicionamiento en los motores de búsqueda y atrae más tráfico orgánico con nuestras técnicas avanzadas de SEO. Nos aseguramos de que tu sitio web sea visible y relevante para las búsquedas de tus clientes potenciales.</p>
-            </article>
-            <article>
-                <h2><span class="orange">06. </span>Análisis Avanzado de Datos</h2>
-                <p>Toma decisiones informadas con nuestros servicios de análisis avanzado. Te proporcionamos insights detallados sobre el comportamiento de tus usuarios y el rendimiento de tus campañas, ayudándote a optimizar tus estrategias de marketing.</p>
-            </article> 
-            <article>
-                <h2><span class="orange">07. </span>Email Marketing</h2>
-                <p>Conecta directamente con tus clientes a través de campañas de email marketing efectivas. Diseñamos correos electrónicos personalizados que capturan la atención y fomentan la acción, aumentando la lealtad y las ventas.</p>
-            </article>
-            <article>
-                <h2><span class="orange">08. </span>Optimización de la Tasa de Conversión (CRO)</h2>
-                <p>Convierte más visitantes en clientes con nuestras técnicas de optimización de la tasa de conversión. Analizamos y mejoramos cada aspecto de tu sitio web para maximizar las conversiones y el retorno de inversión.</p>
-            </article>
+            <div class="description">
+                <p>Si estás buscando mejorar tu presencia en el mercado, aumentar tus ventas o simplemente necesitas asesoramiento sobre cómo llevar tu negocio al siguiente nivel, estás en el lugar correcto.</p>
+            </div>
+            <div class="grid-container-3">
+                <article class="item">
+                    <h2><span class="number orange">01. </span>Digital Marketing</h2>
+                    <p>Desde la creación de contenido hasta la optimización de motores de búsqueda, te ayudamos a conectar con tu audiencia y a impulsar tu marca en el mundo digital. Transformemos tu presencia en línea.</p>
+                </article>
+                <article class="item">
+                    <h2><span class="number orange">02. </span>Marketing en Redes Sociales</h2>
+                    <p>Aumenta tu visibilidad y engagement en las redes sociales con nuestras campañas personalizadas. Creamos contenido atractivo y gestionamos tus perfiles para que tu marca destaque y se conecte de manera auténtica con tu audiencia.</p>
+                </article>
+                <article class="item">
+                    <h2><span class="number orange">03. </span>Marketing de Contenidos</h2>
+                    <p>Captura la atención de tu público objetivo con contenido relevante y valioso. Desarrollamos y distribuimos contenido que no solo informa, sino que también inspira y convierte, fortaleciendo la lealtad a tu marca.</p>
+                </article>
+                <article class="item">
+                    <h2><span class="number orange">04. </span>Publicidad Pagada</h2>
+                    <p>Maximiza tu alcance y obtén resultados rápidos con nuestras campañas de publicidad pagada. Utilizamos plataformas como Google Ads y redes sociales para dirigir tráfico cualificado a tu sitio web y aumentar tus conversiones</p>
+                </article>
+                <article class="item">
+                    <h2><span class="number orange">05. </span>Optimización para Motores de Búsqueda (SEO)</h2>
+                    <p>Mejora tu posicionamiento en los motores de búsqueda y atrae más tráfico orgánico con nuestras técnicas avanzadas de SEO. Nos aseguramos de que tu sitio web sea visible y relevante para las búsquedas de tus clientes potenciales.</p>
+                </article>
+                <article class="item">
+                    <h2><span class="number orange">06. </span>Análisis Avanzado de Datos</h2>
+                    <p>Toma decisiones informadas con nuestros servicios de análisis avanzado. Te proporcionamos insights detallados sobre el comportamiento de tus usuarios y el rendimiento de tus campañas, ayudándote a optimizar tus estrategias de marketing.</p>
+                </article> 
+                <article class="item">
+                    <h2><span class="number orange">07. </span>Email Marketing</h2>
+                    <p>Conecta directamente con tus clientes a través de campañas de email marketing efectivas. Diseñamos correos electrónicos personalizados que capturan la atención y fomentan la acción, aumentando la lealtad y las ventas.</p>
+                </article>
+                <article class="item">
+                    <h2><span class="number orange">08. </span>Optimización de la Tasa de Conversión (CRO)</h2>
+                    <p>Convierte más visitantes en clientes con nuestras técnicas de optimización de la tasa de conversión. Analizamos y mejoramos cada aspecto de tu sitio web para maximizar las conversiones y el retorno de inversión.</p>
+                </article>
+            </div>
        </section>
    
        <section id="testimonials">   
